Correction de l'overflow sur les articles des pages menus et du responsive mobile. Correction d'un écart de marge sur les icones du footer

--- a/style/scss/components/_buttons.scss
+++ b/style/scss/components/_buttons.scss
@@ -16,6 +16,7 @@ a.styled-button {
     color: v.$alternate-text-clr;
     font-weight: lighter;
     opacity: 1;
+    transition: all 250ms;
     @include m.desktop-only {
         width: 300px;
         padding: 15px 10px 15px 10px;
