--- a/style/scss/layouts/_footer.scss
+++ b/style/scss/layouts/_footer.scss
@@ -24,7 +24,8 @@ footer {
                 align-items: center;
             }
             & i {
-                margin-right: 10px;
+                margin-right: 15px;
+                width: 10px;
             }
         }
     }
