--- a/style/scss/layouts/_section.scss
+++ b/style/scss/layouts/_section.scss
@@ -13,11 +13,13 @@ section#welcome-booking {
         width: 50%;
         padding: 1% 3% 0% 3%;
         margin: 20px 0px 20px 0px;
+        @include m.flex-center-center;
     }
     @include m.tablet-only {
         width: 50%;
         padding: 1% 3% 0% 3%;
         margin: 20px 0px 20px 0px;
+        @include m.flex-center-center;
     }
     & p {
         font-weight: lighter;
@@ -25,7 +27,7 @@ section#welcome-booking {
         line-height: 15px;
         line-height: 1.5;
         @include m.desktop-only {
-            text-align: left;
+            text-align: center;
         }
 
     }
